# rs-sdk

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
src/: client.rs  constant.rs  entity.rs  lib.rs  send.rs
tests/: client_test.rs  send_test.rs
