[package]
name = "notify-rs-sdk"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/ZNotify/rs-sdk"
description = "Notify SDK for Rust"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

[profile.release]
lto = true
opt-level = 3

[profile.dev]
opt-level = 0
