[package]
name = "znotify"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/ZNotify/rs-sdk"
repository = "https://github.com/ZNotify/rs-sdk"
description = "Notify SDK for Rust"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.2.1", features = ["v4"] }

[dev-dependencies]
tokio = { version = ">=1.13.1", features = ["full"] }

[profile.release]
lto = true
opt-level = 3

[profile.dev]
opt-level = 0
